# agentsync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  agentsync.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  release.yml
src/agentsync/: __init__.py  cli.py  config.py  sync.py  validate.py
src/agentsync/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  cursor.py
src/agentsync/utils/: __init__.py  backup.py  dedup.py  diff.py  io.py  logger.py  markdown.py  output.py
tests/: test_adapter_antigravity.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_cursor.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_integration.py  test_sync_engine.py  test_utils_backup.py  test_utils_dedup.py  test_utils_diff.py  test_utils_io.py  test_utils_markdown.py  test_validate.py
tests/fixtures/: agentsync_config.yaml  claude_global.json  claude_md_sample.md  claude_project_mcp.json  codex_config.toml
