[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsync"
version = "0.1.0"
description = "Sync MCP server configs and rules across AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Spyrae", email = "hello@spyrae.com" },
]
keywords = ["mcp", "ai-agents", "sync", "cursor", "codex", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
agentsync = "agentsync.cli:main"

[project.urls]
Homepage = "https://github.com/spyrae/agentsync"
Repository = "https://github.com/spyrae/agentsync"
Issues = "https://github.com/spyrae/agentsync/issues"
Changelog = "https://github.com/spyrae/agentsync/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsync"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
